botão voltar só aparece no final

--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,7 @@
       <button id="next-btn" class="hidden">Próxima Pergunta</button>
     </div>
 
-    <button class="back" id="back-btn">← Voltar</button>
+    <button class="back hidden" id="back-btn">← Voltar</button>
     <div id="quiz-error" style="color:#fff;margin-top:16px;text-align:center;"></div>
   </div>
 
