--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="scoreboard">
-    <div class="score acertos">✔️ <span id="acertos">0</span></div>
+    <div class="score acertos">✅ <span id="acertos">0</span></div>
     <div class="score erros">❌ <span id="erros">0</span></div>
   </div>
   <div class="curso-container">
