respostas salvas no localStorage, resetadas ao clickar em Finalizar ou Refazer

--- a/quiz.html
+++ b/quiz.html
@@ -24,6 +24,8 @@
     </div>
 
     <button class="back hidden" id="back-btn">← Voltar</button>
+    <button class="hidden" id="finish-btn">✓ Finalizar Quiz</button>
+    <button class="hidden" id="retry-btn">↻ Refazer Quiz</button>
     <div id="quiz-error" style="color:#fff;margin-top:16px;text-align:center;"></div>
   </div>
 
